feat(backend): Enhance CORS configuration and file upload disk space validation
- Restrict CORS allowed origins to values defined in environment variables (`cors.allowed-origins`).
- Update allowed and exposed headers for improved API security and end-to-end tracing.
- Validate available disk space before file uploads, ensuring a 10% safety buffer to prevent partial writes.
- Add file validator checks for maximum filename length and control characters.
- Externalize environment variables for secrets and CORS configuration.
- Add unit tests for disk space validation during uploads.